Fix home alignment

--- a/Web/Css/home.css
+++ b/Web/Css/home.css
@@ -1,20 +1,16 @@
 ﻿.list-holder{
     background: #fff;
     padding: 10px;
-    margin-top: 15px;
+    margin-bottom: 15px;
     position: relative;
     display: inline-block;
     width: 100%;
     vertical-align: top;
 }
 
-.top-list{
-    margin-top: 0;
-}
-
 @media only screen and (min-device-width: 768px){
     .list-holder{
-        width: calc(50% - 8px);
+        width: calc(50% - 5px);
     }
 
     .list-holder:first-child{
@@ -172,13 +168,10 @@
 .home-list{
     background: #fff;
     padding: 8px;
-    margin-top: 15px;
+    margin-bottom: 15px;
     position: relative;
 }
 
-.home-list:first-child{
-    margin-top: 0;
-}
 
 .home-list-title{
     font-weight: bold;
